--- a/app/styles/theme/_shale-base.scss
+++ b/app/styles/theme/_shale-base.scss
@@ -4,12 +4,16 @@ $bp-shale-med: new-breakpoint(min-width 765px max-width 1080px);
 $bp-shale-small: new-breakpoint(min-width 500px max-width 764px);
 $bp-shale-ad: new-breakpoint(min-width 688px);
 
-
 $bp-landing-large: new-breakpoint(min-width 1000px);
 $bp-landing-medium: new-breakpoint(min-width 600px max-width 999px);
 $bp-landing-small: new-breakpoint(min-width 400px max-width 599px);
 $bp-landing-tiny: new-breakpoint(min-width 399px);
 // Short-Hed
+body {
+  overflow-x: hidden;
+  width: 100%;
+}
+
 h1 {
   color: $white;
   font-family: league-gothic;
